--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>My Notes</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 <script src="{{ url_for('static', filename='myjs.js') }}"></script>
 <div class=page>
   <h1>My Notes</h1>
