--- a/templates/select_topic.html
+++ b/templates/select_topic.html
@@ -12,21 +12,22 @@
   </form>
 </div>
 <p/>
-
-<div>
+<table>
+  <tr>
+    <td>
       <select name="list" id="topicList" size="10">
       	{% for topic in topics %}
     		<option value="{{ topic.id }}">{{ topic.title }}</option>
     	{% endfor %}
       </select>
-  
+</td>
+<td>
 	<button value="" onclick="selectTopic()">Select</button>
 	<button value="">Edit</button>
   	<button value="">Delete</button>
-  
-</div>
-
-
+</td>
+  </tr>
+</table>
 
 
 {% endblock %}
