--- a/static/styles.css
+++ b/static/styles.css
@@ -25,10 +25,11 @@ h2 {
 
 .page {
   margin: 2em auto;
-  width: 35em;
+  width: 55em;
   border: 5px solid #ccc;
   padding: 0.8em;
   background: white;
+
 }
 
 .entries {
@@ -72,6 +73,27 @@ h2 {
   background: #f0d6d6;
   padding: 0.5em;
 }
+
+div#wrapper{
+display:flex;
+margin-top: 10px;
+}
+
+div#left{
+flex: 0;
+
+}
+
+div#right{
+flex: 1;
+margin-left: 10px;
+}
+
+.note-display{
+width: 95%;
+ height:95%;
+}
+
 
 select {
   border: 0 none;
